# human-panic

./: .clippy.toml  .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  build.rs  release.toml
.github/: renovate.json5  settings.yml
.github/workflows/: audit.yml  ci.yml  rust-next.yml
examples/: err.rs  example.rs  main.rs  window.rs
src/: lib.rs  linux_window.rs  report.rs  windows_window.rs
src/window/: linux.rs  mod.rs  windows.rs
tests/custom-message/: Cargo.toml
tests/custom-message/src/: main.rs
tests/custom-message/tests/: integration.rs
tests/custom-panic/: Cargo.toml
tests/custom-panic/src/: main.rs
tests/custom-panic/tests/: integration.rs
tests/name-collision/: Cargo.toml
tests/name-collision/src/: main.rs
tests/name-collision/tests/: integration.rs
tests/simple/: Cargo.toml
tests/simple/tests/: integration.rs
tests/single-panic/: Cargo.toml
tests/single-panic/src/: main.rs
tests/single-panic/tests/: integration.rs
