[package]
name = "human-panic"
version = "1.0.4-alpha.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yoshuawuyts/human-panic"
homepage = "https://github.com/yoshuawuyts/human-panic"
documentation = "https://docs.rs/human-panic"
description = "Panic messages for humans"
authors = ["Yoshua Wuyts <yoshuawuyts@gmail.com>",
           "Pascal Hertleif <killercup@gmail.com>",
           "Katharina Fey <kookie@spacekookie.de>"]
readme = "README.md"
edition = "2018"

[package.metadata.docs.rs]
features = ["nightly"]

[dependencies]
termcolor = "1.0.4"
uuid = { version = "0.8.0", features = ["v4"], default-features = false }
serde_derive = "1.0.79"
toml = "0.5.0"
serde = "1.0.79"
os_type = "2.2.0"
backtrace = "0.3.9"

[features]
nightly = []

[workspace]
members = [
  "tests/single-panic",
  "tests/custom-panic",
]
