[workspace]
members = [
  "tests/single-panic",
  "tests/custom-panic",
]

[package]
name = "human-panic"
version = "1.0.4-alpha.0"
description = "Panic messages for humans"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rust-cli/human-panic"
homepage = "https://github.com/rust-cli/human-panic"
categories = ["command-line-interface"]
keywords = ["cli", "panic"]
edition = "2018"
rust-version = "1.60.0"  # MSRV
include = [
  "build.rs",
  "src/**/*",
  "Cargo.toml",
  "LICENSE*",
  "README.md",
  "benches/**/*",
  "examples/**/*"
]

[package.metadata.docs.rs]
all-features = true

[package.metadata.release]
pre-release-replacements = [
  {file="CHANGELOG.md", search="Unreleased", replace="{{version}}", min=1},
  {file="CHANGELOG.md", search="\\.\\.\\.HEAD", replace="...{{tag_name}}", exactly=1},
  {file="CHANGELOG.md", search="ReleaseDate", replace="{{date}}", min=1},
  {file="CHANGELOG.md", search="<!-- next-header -->", replace="<!-- next-header -->\n## [Unreleased] - ReleaseDate\n", exactly=1},
  {file="CHANGELOG.md", search="<!-- next-url -->", replace="<!-- next-url -->\n[Unreleased]: https://github.com/rust-cli/human-panic/compare/{{tag_name}}...HEAD", exactly=1},
]

[features]
default = ["color"]
nightly = []
color = ["dep:termcolor", "dep:concolor"]

[dependencies]
termcolor = { version = "1.0.4", optional = true }
concolor = { version = "0.0.11", features = ["auto"], optional = true }
uuid = { version = "0.8.0", features = ["v4"], default-features = false }
serde_derive = "1.0.79"
toml = "0.5.0"
serde = "1.0.79"
os_info = "2.0.6"
backtrace = "0.3.9"
