[workspace]
members = [
  "tests/single-panic",
  "tests/custom-panic",
]

[package]
name = "human-panic"
version = "1.1.2"
description = "Panic messages for humans"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rust-cli/human-panic"
homepage = "https://github.com/rust-cli/human-panic"
categories = ["command-line-interface"]
keywords = ["cli", "panic"]
edition = "2018"
rust-version = "1.64.0"  # MSRV
include = [
  "build.rs",
  "src/**/*",
  "Cargo.toml",
  "LICENSE*",
  "README.md",
  "benches/**/*",
  "examples/**/*"
]

[package.metadata.docs.rs]
all-features = true

[package.metadata.release]
pre-release-replacements = [
  {file="CHANGELOG.md", search="Unreleased", replace="{{version}}", min=1},
  {file="CHANGELOG.md", search="\\.\\.\\.HEAD", replace="...{{tag_name}}", exactly=1},
  {file="CHANGELOG.md", search="ReleaseDate", replace="{{date}}", min=1},
  {file="CHANGELOG.md", search="<!-- next-header -->", replace="<!-- next-header -->\n## [Unreleased] - ReleaseDate\n", exactly=1},
  {file="CHANGELOG.md", search="<!-- next-url -->", replace="<!-- next-url -->\n[Unreleased]: https://github.com/rust-cli/human-panic/compare/{{tag_name}}...HEAD", exactly=1},
]

[features]
default = ["color"]
nightly = []
color = ["dep:anstyle", "dep:anstream"]

[dependencies]
anstyle = { version = "0.3.1", optional = true }
anstream = { version = "0.2.2", optional = true }
uuid = { version = "1.3.0", features = ["v4"], default-features = false }
serde_derive = "1.0.152"
toml = "0.7.2"
serde = "1.0.152"
os_info = "3.6.0"
backtrace = "0.3.67"
